Update 1.0.1
Added new class JsonPath that can help to search elements in deep JSON structures